# Duramen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/audit/: Cargo.toml
crates/audit/src/: logger.rs
crates/cli/: Cargo.toml
crates/cli/benches/: e2e_pipeline.rs
crates/cli/src/: main.rs
crates/cli/src/commands/: audit.rs  check.rs  init.rs  mod.rs  validate.rs
crates/cli/tests/: check_test.rs  e2e_pipeline_test.rs  hook_script_test.rs  init_test.rs  validate_test.rs
crates/engine/: Cargo.toml
crates/engine/benches/: cedar_eval.rs
crates/engine/src/: adapter.rs  decision.rs  entities.rs  evaluator.rs  lib.rs  policy.rs
crates/engine/tests/: default_policies_test.rs
crates/policy-defaults/: Cargo.toml
crates/policy-defaults/src/: lib.rs
crates/request-adaptor/: Cargo.toml
crates/request-adaptor/src/: copilot_cli.rs  generic.rs  lib.rs  pipeline.rs  traits.rs
crates/request-adaptor/src/classifiers/: destructive.rs  mod.rs  package_install.rs
crates/request-adaptor/src/commands/: default.rs  git.rs  mod.rs  rm.rs
crates/request-adaptor/src/enrichers/: elevation.rs  file_metadata.rs  mod.rs  network_domain.rs  path_sensitivity.rs
crates/response-formatter/: Cargo.toml
crates/response-formatter/src/: copilot_cli.rs  generic.rs  lib.rs  traits.rs
docs/: adding-a-new-agent.md  adding-command-handlers.md  agent-permission-integration.md  copilot-cli-cedar-mapping.md  scenarios.md  test-coverage.md
docs/benchmark/: benchmark-report-2026-03-31-pipeline.md  benchmark-report-2026-03-31.md
docs/plans/: 2026-03-30-duramen.md
docs/specs/: 2026-03-30-duramen-design.md
docs/superpowers/specs/: 2026-03-30-agent-authz-design.md
hooks/copilot-cli/: README.md  duramen-hook.ps1  duramen-hook.sh  duramen.json  install.ps1  install.sh
policies/default/: allow-default.cedar  audit-file-writes.cedar  deny-destructive.cedar  require-approval-sensitive.cedar  schema.cedarschema
policies/examples/: allow-all.cedar  deny-network.cedar  team-workflow.cedar
