[package]
name = "duramen"
description = "CLI binary for fine-grained AI agent authorization"
version.workspace = true
edition.workspace = true

[[bin]]
name = "duramen"
path = "src/main.rs"

[dependencies]
duramen-engine = { path = "../engine" }
duramen-request-adaptor = { path = "../request-adaptor" }
duramen-response-formatter = { path = "../response-formatter" }
duramen-audit = { path = "../audit" }
duramen-policy-defaults = { path = "../policy-defaults" }
clap = { workspace = true }
serde_json = { workspace = true }
dirs-next = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
duramen-engine = { path = "../engine" }
duramen-request-adaptor = { path = "../request-adaptor" }
duramen-response-formatter = { path = "../response-formatter" }
duramen-policy-defaults = { path = "../policy-defaults" }

[[bench]]
name = "e2e_pipeline"
harness = false
